[gd_scene load_steps=4 format=2]

[ext_resource path="res://scene/NPC Quest.gd" type="Script" id=1]
[ext_resource path="res://art/icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10.79, 31.2371 )

[node name="Mago dos Upgrades" type="Area2D"]

position = Vector2( 624.301, 542.442 )
scale = Vector2( 1.69003, 1.79217 )
input_pickable = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

position = Vector2( -2.74875, 4.64651 )
scale = Vector2( 2.73386, 0.864284 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="1"]

position = Vector2( -2.64621, 4.26831 )
scale = Vector2( 0.917306, 0.866615 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="." index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -50.0
margin_top = -69.0
margin_right = -10.0
margin_bottom = -25.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
__meta__ = {
"_edit_group_": true
}

[node name="YesButton" type="MenuButton" parent="VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
text = "Yes"
flat = true
align = 1
items = [  ]

[node name="NoButton" type="MenuButton" parent="VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 24.0
margin_right = 40.0
margin_bottom = 44.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
text = "No"
flat = true
align = 1
items = [  ]

[node name="LabelMenu" type="Label" parent="." index="3"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -136.0
margin_top = -84.0
margin_right = 120.0
margin_bottom = -46.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Deseja forjar algo?"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="NPCName" type="Label" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -59.0
margin_top = -41.0
margin_right = 59.0
margin_bottom = -27.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Andre"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HideTimer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[connection signal="pressed" from="VBoxContainer/YesButton" to="." method="_on_YesButton_pressed"]

[connection signal="timeout" from="HideTimer" to="." method="_on_HideTimer_timeout"]


